update wilder feature

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,3 +35,11 @@ h1, h2, h3 {
   p {
 	margin: 0 0 1.15em;
   }
+
+  button {
+    color: white;
+    padding: 0.35em 0.5em;
+    margin: 0.5em;
+    border: 1px solid #ccc;
+    background-color: gray;
+  }
