update modal handler

--- a/frontend/src/components/Wilder/Wilder.module.css
+++ b/frontend/src/components/Wilder/Wilder.module.css
@@ -54,3 +54,11 @@
   justify-content: space-around;
   flex-wrap: wrap;
 }
+
+.container {
+	position: relative;
+	width: 100%;
+	padding: 1em 0;
+	display: flex;
+	justify-content: center;
+}
